--- a/.github/workflows/codeql-analysis-php.yml
+++ b/.github/workflows/codeql-analysis-php.yml
@@ -2,9 +2,9 @@ name: Static Code Security Analysis (Psalm)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   analyze:
