--- a/.github/workflows/codeql-analysis-php.yml
+++ b/.github/workflows/codeql-analysis-php.yml
@@ -2,7 +2,7 @@ name: Static Code Security Analysis (Psalm)
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, psalm-code-security-scan ]
   pull_request:
     branches: [ master ]
 
